# sphere-audio-visualizer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rust-toolchain
.github/workflows/: release.yml  test.yml
scripts/pre-build/: linux.sh  mac.sh  windows.ps1
sphere-audio-visualizer/: Cargo.toml  build.rs
sphere-audio-visualizer-core/: Cargo.toml
sphere-audio-visualizer-core/src/metaballs/: mod.rs
sphere-audio-visualizer-core/src/raytracing/: mod.rs
sphere-audio-visualizer-core/src/raytracing/background/: mod.rs
sphere-audio-visualizer-core/src/raytracing/light/: mod.rs
sphere-audio-visualizer-core/src/utils/: math.rs  mod.rs  option.rs
sphere-audio-visualizer-desktop/: Cargo.toml
sphere-audio-visualizer-desktop/src/: main.rs
sphere-audio-visualizer-desktop/src/gstreamer_visualizer/: mod.rs  system.rs  uri.rs  visualizer.rs
sphere-audio-visualizer-spirv/: Cargo.toml
sphere-audio-visualizer-spirv/src/: lib.rs
sphere-audio-visualizer/benches/: simulation.rs  spectrum.rs
sphere-audio-visualizer/src/: lib.rs
sphere-audio-visualizer/src/audio_analysis/: mod.rs
sphere-audio-visualizer/src/audio_analysis/filter/: mod.rs
sphere-audio-visualizer/src/audio_analysis/utils/: mod.rs  ring_buffer.rs
sphere-audio-visualizer/src/frontend/: mod.rs
sphere-audio-visualizer/src/frontend/drawer/: mod.rs  module.rs  scene_converter.rs  simulation_resampler.rs  simulator.rs  spectrum.rs
sphere-audio-visualizer/src/module/: mod.rs
sphere-audio-visualizer/src/rendering/scene/: metaballs.rs  mod.rs  raytracing.rs
sphere-audio-visualizer/src/rendering/wgpu/: mod.rs
sphere-audio-visualizer/src/rendering/wgpu/pipeline/: metaballs.rs  mod.rs  raytracing.rs
sphere-audio-visualizer/src/rendering/wgpu/utils/: mod.rs  queue.rs  raw_window_handle.rs  shader_cache.rs  typed_buffer.rs
sphere-audio-visualizer/src/simulation/: mod.rs  resampler.rs  scene_2d.rs  scene_3d.rs
sphere-audio-visualizer/src/utils/: gradient.rs  mod.rs  type_map.rs
sphere-audio-visualizer/src/visualizer/: wgpu.rs
sphere-visualizer/: Cargo.toml  build.rs
sphere-visualizer-core/: Cargo.toml
sphere-visualizer-core/src/: lib.rs
sphere-visualizer-core/src/raytracing/background/: constant.rs
sphere-visualizer-core/src/raytracing/camera/: mod.rs  perspective.rs
sphere-visualizer-core/src/raytracing/light/: point.rs
sphere-visualizer-core/src/raytracing/shape/: mod.rs  rect.rs  sphere.rs
sphere-visualizer-core/src/utils/: option.rs
sphere-visualizer-desktop/: Cargo.toml  settings.yaml
sphere-visualizer-desktop/src/: main.rs
sphere-visualizer-desktop/src/gstreamer_visualizer/: mod.rs  system.rs  uri.rs  visualizer.rs
sphere-visualizer-spirv/: Cargo.toml
sphere-visualizer-spirv/src/: lib.rs
sphere-visualizer/benches/: simulation.rs  spectrum.rs
sphere-visualizer/src/audio_analysis/: mod.rs  spectrum.rs
sphere-visualizer/src/audio_analysis/filter/: iir.rs
sphere-visualizer/src/audio_analysis/utils/: ring_buffer.rs
sphere-visualizer/src/frontend/: app.rs
sphere-visualizer/src/frontend/drawer/: mod.rs  rendering.rs  visualizer.rs
sphere-visualizer/src/rendering/: mod.rs
sphere-visualizer/src/rendering/scene/: metaballs.rs  raytracing.rs
sphere-visualizer/src/rendering/wgpu/: mod.rs
sphere-visualizer/src/rendering/wgpu/pipeline/: egui.rs  metaballs.rs  metaballs.wgsl  raytracing.rs  raytracing.wgsl
sphere-visualizer/src/simulation/: mod.rs  scene_2d.rs  scene_3d.rs
sphere-visualizer/src/utils/: gradient.rs  type_map.rs
sphere-visualizer/src/visualizer/: dynamic_visualizer.rs  mod.rs  wgpu.rs
