[package]
name = "sphere-visualizer-spirv"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
sphere-visualizer-core = { path = "../sphere-visualizer-core" }

[dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
features = ["glam"]
